adicionei mais um paragrafo

--- a/site exemplo/index.html
+++ b/site exemplo/index.html
@@ -9,8 +9,12 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <hr>
-    
+
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus magni, accusamus aspernatur at placeat aliquid quaerat beatae qui mollitia consequatur minima odit, velit, asperiores eveniet maxime rerum iste! Aperiam, neque!</p>
+    <p>ipsum dolor sit amet consectetur adipisicing elit. Sapiente rem accusantium officia commodi iusto excepturi, error quam nisi magnam minus, ad, sint distinctio facilis sit hic quos aliquid. Ipsa, nulla.
+        
+    </p> 
+
 
 </body>
 </html>
